# stream-fusion

./: LICENSE  README.md  cabal.project  stream-fusion.cabal
Control/Monad/: Stream.hs
Data/: Stream.hs
Data/List/: Stream.hs
tests/Bench/: ListVsBase.hs  Utils.hs
