cabal-version: 3.0
Name:                stream-fusion
Version:             0.2.0.0
Author:              Duncan Coutts, Don Stewart, Jaro Reinders
Maintainer:          jaro.reinders@gmail.com
License:             BSD-3-Clause
License-file:        LICENSE
Synopsis:            Faster Haskell lists using stream fusion
Homepage:            http://hackage.haskell.org/trac/ghc/ticket/915
Description:
        This package provides the standard Haskell list library
        reimplemented to allow stream fusion. This should in general
        provide faster list operations, and faster code for list-heavy
        programs.  See the paper /Stream Fusion: From Lists to Streams to Nothing at All/,
        Coutts, Leshchinskiy and Stewart, 2007.
        To use, simply import Data.List.Stream in place of Data.List,
        and hide list functions from the Prelude.
Category:            Data
Build-Type:          Simple
Stability:           experimental

Library
  Build-Depends:     base
  Exposed-modules:   Data.Stream
                     Data.List.Stream
                     -- Control.Monad.Stream
  ghc-options:       -O2 -Wall
  default-language: GHC2021

Benchmark list-vs-base
    main-is:          Bench/ListVsBase.hs
    other-modules: Bench.Utils
    hs-source-dirs: tests
    build-depends:    base >= 4 && < 5, stream-fusion, bytestring, tasty-bench, deepseq
    default-language: Haskell2010
    type: exitcode-stdio-1.0

Benchmark stream-vs-list
    main-is:          Bench/StreamVsList.hs
    other-modules: Bench.Utils
    hs-source-dirs: tests
    build-depends:    base >= 4 && < 5, stream-fusion
    default-language: Haskell2010
    type: exitcode-stdio-1.0